fixed box alignment

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -182,7 +182,7 @@ body {
 
 .friend-name {
 	line-height: 2;
-	width: 226px;
+	width: 220px;
 	float: left;
 }
 
